Fix right side on nav bar not working on small screens

--- a/application/static/index.css
+++ b/application/static/index.css
@@ -53,3 +53,7 @@ div #content-block-div {
 td {
   padding: 0 5px;
 }
+
+.navbar-nav {
+  max-width:25%;
+}
